gcc/testsuite/rust/rustc/ui/structs/incomplete-fn-in-struct-definition.rs
fn main() {}

struct S {
    fn: u8 // { dg-error "" "" { target *-*-* } }
}

